vault backup: 2026-07-23 23:56:32: modified the construction doc